...
	const { bottom } = useSafeAreaInsets()
	const patrons = usePatrons()
	const { data: caption } = useInfoCaption()
	const otaVersion = getStoredOtaVersion()

	return (
		<YStack flex={1} backgroundColor='$background' testID='settings-screen-about'>
			<ScrollView
				contentContainerStyle={{
					paddingBottom: Math.max(bottom, 16) + 16,
					paddingHorizontal: '$2',
				}}
				showsVerticalScrollIndicator={false}
...
							gap='$1'
							onPress={() => Linking.openURL('https://github.com/Jellify-Music/App')}
							testID='jellify-source-link'
							{...ICON_PRESS_STYLES}
						>
							<Icon name='code-tags' small color='$borderColor' />
							<Text>View Source</Text>
						</XStack>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() => downloadUpdate(true)}
							{...ICON_PRESS_STYLES}
...
							<Text>Update</Text>
						</XStack>
					</XStack>

					<YStack gap='$2'>
						<SizableText size='$4' fontWeight='600'>
							Caught a bug?
						</SizableText>
						<XStack gap='$4' flexWrap='wrap'>
							<XStack
								alignItems='center'
								gap='$1'
								onPress={() =>
									Linking.openURL('https://github.com/Jellify-Music/App/issues')
								}
								testID='jellify-report-issue'
								{...ICON_PRESS_STYLES}
							>
								<Icon name='github' small color='$warning' />
								<Text>Report Issue</Text>
							</XStack>
							<XStack
								alignItems='center'
								gap='$1'
								onPress={() => Linking.openURL('https://discord.gg/yf8fBatktn')}
								testID='jellify-join-discord'
								{...ICON_PRESS_STYLES}
							>
								<Icon name='chat' small color='$secondary' />
								<Text>Join Discord</Text>
							</XStack>
						</XStack>
					</YStack>
				</YStack>

				<Spacer />
...
					padding='$4'
					borderRadius={'$2'}
					borderColor={'$borderColor'}
					borderWidth={'$1'}
				>
					<SizableText size='$4' fontWeight='600'>
						Wall of Fame
					</SizableText>
					<XStack gap='$4' flexWrap='wrap'>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() =>
...
